fixed detection
