# docs/swagger.json
@@ -168,6 +168,9 @@
                 "video_url"
             ],
             "properties": {
+                "predict_api_url": {
+                    "type": "string"
+                },
                 "video_url": {
                     "description": "@Description URL of the video to analyze",
                     "type": "string"
@@ -178,6 +181,9 @@
             "description": "Response containing predicted actions in Uzbek language",
             "type": "object",
             "properties": {
+                "output_video_url": {
+                    "type": "string"
+                },
                 "predictions": {
                     "description": "@Description List of predicted actions in Uzbek language",
                     "type": "array",
